Fix posts show responsiveness on mobile

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,9 +1,9 @@
 @import 'bootstrap';
 @import url('https://fonts.googleapis.com/css?family=Comfortaa|Montserrat:400,500,600,700');
 
-* {
-  border: 1px solid lightgray;
-}
+// * {
+//   border: 1px solid lightgray;
+// }
 
 html {
   position: relative;
